updated index page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <tr>
       <td><span class="lifetime_title">Wins</span><br><span id="lifetime_wins" class="lifetime_data"></span></td>
       <td><span class="lifetime_title">Win Percentage</span><br><span id="lifetime_win_percentage" class="lifetime_data"></span></td>
-      <td><span class="lifetime_title">Timed Played</span><br><span id="lifetime_time_played" class="lifetime_data"></span></td>
+      <td><span class="lifetime_title">Time Played</span><br><span id="lifetime_time_played" class="lifetime_data"></span></td>
     </tr>
     <tr>
       <td><span class="lifetime_title">Kills</span><br><span id="lifetime_kills" class="lifetime_data"></span></td>
